assets/styles/layout.less
@import "node_modules/skeleton-less/less/skeleton";
@import "media_queries";

body > header, article, main, footer {
  .container();
}

body > header {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: flex-start;
  padding-top: 0.5em;
}

body > header > .title {
  align-self: center;
}

body > header > nav {
  align-self: flex-end;
}

@media (@medium) {
  body > header > nav {
    display: none;
  }
}

.content header {
  h1, h2, h3, h4, h5 {
    margin-bottom: 0;
  }
}

.stat-block {
  position: relative;
}

.stat-block img.background {
  width: 100%;
  z-index: -1;
  position: relative;
}

.stat-block vellum-stat-block {
  position: absolute;
  top: 0;
  right: 0;
}

.stat-block-left {
  position: relative;
}

.stat-block-left img.background {
  width: 100%;
  z-index: -1;
  position: relative;
}

.stat-block-left vellum-stat-block {
  position: absolute;
  top: 0;
  left: 0;
}

@media (@medium) {

  .stat-block {
    position: static;
  }

  .stat-block img.background {
    display: none;
  }

  .stat-block vellum-stat-block {
    position: static;
  }

  .stat-block-left {
    position: static;
  }

  .stat-block-left img.background {
    display: none;
  }

  .stat-block-left vellum-stat-block {
    position: static;
  }
}

article {
  margin: 0;
  width: 100%;
  margin-bottom: 2em;
}

article header {
  margin: 0;
}

.content table td {
  padding-right: 1em;
}

table td.number, th.number {
  padding-left: 1em;
  padding-right: 1em;
  text-align: center;
}

